# a_web-based_input-overlay

./: .gitignore  ARCHITECTURE_ANALYSIS.md  BEVY_EVDEV_ARCHITECTURE.md  BEVY_EVDEV_DELIVERABLES.md  BEVY_EVDEV_README.md  BUILD.md  BUILD_VERIFICATION_REPORT.md  CLAUDE.md  COUNCIL_DECISION.md  Cargo.toml  DECLARATIVE_VS_IMPERATIVE.md  DIOXUS_DEMO_REPORT.md  DIOXUS_EVDEV_DEMO.md  DIOXUS_FINAL_REPORT.md  FINAL_SUMMARY.txt  GTK4_LAYER_SHELL_REPORT.md  GTK4_QUICKSTART.md  ICED_ARCHITECTURE.md  ICED_COMPLETE_DEMO.txt  ICED_DEMO_SUMMARY.md  ICED_IMPLEMENTATION_GUIDE.md  ICED_MESSAGE_FLOW.md  ICED_RUST_SOURCE.md  INSTALL_TAURI_EVDEV.md  MASTER_SUMMARY.md  MISSION_ACCOMPLISHED.md  NEUTRALINO_COMPLETE_DELIVERY.txt  NEUTRALINO_EVDEV_REPORT.md  NEUTRALINO_VS_ELECTRON_VS_TAURI.md  PARALLEL_APPROACH_SUMMARY.md  PARALLEL_DEMOS_REVIEW.md  RAYLIB_DEMO_SUMMARY.md  RAYLIB_QUICKSTART.md  RAYLIB_SETUP.md  README-WINDOWS.md  README.md  README_SLINT_EVDEV.md  SLINT_EVDEV_DEMO.md  TAURI_DEMO_SUMMARY.md  TAURI_EVDEV_SUMMARY.txt  (+48 more)
.github/workflows/: build-web.yml  deploy-experimental.yml  deploy-gh-pages.yml  release.yml
SourceCode/: eslint.config.cjs  package-lock.json  package.json  tsconfig.json
SourceCode/DesktopWrappedWebapp/: main.ts  modeSelector.html  modeSelectorPreload.ts  preload.d.ts  preload.ts  sdl-bridge.ts  tsconfig.json
SourceCode/WebApp/: esbuild.config.js  esbuild.config.ts  global.d.ts  index-electron.html  index.html  vite.config.ts
SourceCode/WebApp/_helpers/: TypeUtilities.ts  Vector.d.ts  Vector.ts  generateVersionGitCommitHash.ts  version.d.ts  (+1 more)
SourceCode/_devTools/: .eslintrc.cjs  buildForWindowsDevelopment.ps1  package-lock.json  package.json  tsconfig.json  tsconfig.webapp.json
browserInputListeners/: _tauriAdapter.js  evdevInput.js  gamepad.js  keyboard.js  mouse.js  mouse.ts
browserInputOverlayView/: default.js
browserInputOverlayView/_assets/: style.css
browserInputOverlayView/_helpers/: Vector.ts  draw.js
browserInputOverlayView/actions/: PropertyEdit.js
browserInputOverlayView/objects/: LinearInputIndicator.ts  PlanarInputIndicator_Radial.ts
docs/: PARALLEL_BRANCHES.md  RAYLIB_vs_TAURI.md  RDEV_vs_ALTERNATIVES.md  wayland-input-capture.md
experimental/: bundle.js  esbuild.config.js  esbuild.config.js.map  index.css  index.html
experimental/_bundleAllCompiledJavascriptForWebapp/: bundle.js  bundle.js.map
experimental/_helpers/: TypeUtilities.d.ts  TypeUtilities.js  TypeUtilities.js.map  Vector.js  Vector.js.map
experimental/controllerToMutateCustomConfiguration/: UserEditModeInteractionsController.d.ts  UserEditModeInteractionsController.js  UserEditModeInteractionsController.js.map
experimental/modelToSaveCustomConfigurationLocally/: ConfigManager.d.ts  ConfigManager.js  ConfigManager.js.map  ConfigManager.ts  CustomisableCanvasConfig.d.ts  CustomisableCanvasConfig.js  CustomisableCanvasConfig.js.map  CustomisableCanvasConfig.ts  configSchema.d.ts  configSchema.js  configSchema.js.map  configSerializer.d.ts  configSerializer.js  configSerializer.js.map  configUpdaters.d.ts  configUpdaters.js  configUpdaters.js.map
experimental/viewWhichRendersConfigurationAndUi/: default.d.ts  default.js  default.js.map  default.ts
experiments/tauri-rdev-grab/: .gitignore  BUILD_SUMMARY.md  COMPARISON.md  Cargo.toml  EXPERIMENTAL_PLAN.md  INDEX.md  QUICK_START.md  RDEV_INVESTIGATION.md  README.md  SETUP.md  TEST_RESULTS.md  run.sh  shell.nix
experiments/tauri-rdev-grab/src/: main.rs
framework/: Vector.ts  applyProperties.ts
neutralino-app/: IMPLEMENTATION_SUMMARY.md  README.md  neutralino.conf.json  package.json  run.sh  server.js  shell.nix  test-server.js
neutralino-app/resources/: index.html
objects/: Key.ts  LinearInputIndicator.ts
public/: default_config.json  index.html
scenes/: default.js  e2e-test.js  moba.js
src/: components.rs  input.rs  main.rs  overlay.rs  renderer.rs  shaders.rs  systems.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: input_linux.rs  main.rs
ui/: overlay.slint
webApp/: esbuild.config.ts  eslint.config.js  global.d.ts  index.html  package-lock.json  package.json  test-validate.ts  tsconfig.json
webApp/_helpers/: Vector.js  generateVersionGitCommitHash.js  generateVersionGitCommitHash.ts  toast.ts  version.ts
webApp/browserInputListeners/: gamepad.js  keyboard.js  keyboard.ts  mouse.js  mouse.ts
webApp/browserInputOverlayView/: default.js  default.ts
webApp/controller/: InteractionController.ts
webApp/controllerToMutateCustomConfiguration/: InteractionController.ts
webApp/inputListeners/: mouse.ts
webApp/model/: ConfigManager.ts  OmniConfig.ts  configSerializer.ts  sceneSerializer.ts
webApp/modelToSaveCustomConfigurationLocally/: ConfigManager.js  ConfigManager.ts  OmniConfig.ts  configSchema.js  configSchema.ts  configSerializer.ts  configUpdaters.js  configUpdaters.ts  sceneSerializer.ts
webApp/persistentData/: ConfigManager.ts  OmniConfig.ts  configSchema.ts  configUpdaters.ts  sceneSerializer.ts
webApp/sceneRender/: default.ts
webApp/scripts/: generate-version.ts
webApp/view/: default.ts
webApp/viewWhichRendersConfigurationAndUi/: default.js  default.ts
wrapWebAppAsStandaloneProgram/: main.js  main.ts  package-lock.json  package.json  preload.js  tsconfig.json
(+182 files in other folders)
