[package]
name = "input-overlay-gtk4"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "input-overlay"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
gtk4-layer-shell = "0.2"
glib = "0.19"
glib-build-tools = "0.19"

# Input capture
evdev = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
split-debuginfo = "packed"
