[package]
name = "wgpu-input-overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wgpu-overlay"
path = "src/main.rs"

[dependencies]
# Graphics (WebGPU standard)
wgpu = "0.21"
wgpu-core = "0.21"

# Window management
winit = "0.30"
raw-window-handle = "0.6"

# Utilities
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }

# Input capture (Wayland-native)
evdev = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
split-debuginfo = "packed"
