[package]
name = "input-overlay"
version = "0.1.0"
description = "Transparent input overlay with global capture"
authors = ["zitongcharliedeng"]
license = "MIT"
repository = "https://github.com/zitongcharliedeng/a_web-based_input-overlay"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
