[package]
name = "analog-keyboard-overlay"
version = "1.0.0"
description = "Web-based analog keyboard and gamepad overlay for streamers"
authors = ["zitongcharliedeng"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Global input listening with unstable_grab
rdev = { version = "0.5", features = ["unstable_grab"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "analog-keyboard-overlay"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
