[package]
name = "tauri-rdev-grab-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tauri-rdev-test"
path = "src/main.rs"

[dependencies]
# Input capture with unstable Wayland grab support
rdev = { version = "0.5", features = ["unstable_grab"] }

# Tokio for async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"

# For cross-platform compatibility checks
cfg-if = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
split-debuginfo = "packed"
